<resources>
    <string name="app_name">Story Apps</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="invalid_username">Not a valid Email</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="loading">Loading…</string>
    <string name="list_name">Nama</string>
    <string name="description">Description</string>
    <string name="tambah_data_story">Add Data Story</string>
    <string name="logout">Logout</string>
    <string name="detail_name">Name</string>
    <string name="image_detail">Image Detail</string>
    <string name="galeri">GALLERY</string>
    <string name="kamera">CAMERA</string>
    <string name="description_text">Description</string>
    <string name="tambah">ADD</string>
    <string name="imageview">ImageView</string>
    <string name="date">Date</string>
    <string name="imageemail">ImageEmail</string>
    <string name="email">Email</string>
    <string name="imagepass">ImagePass</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="belum_memiliki_akun">Don\'t have an account yet ?</string>
    <string name="daftar_akun">Registration</string>
    <string name="logo">logo</string>
    <string name="nama_lengkap">Full Name</string>
    <string name="daftar">Registration</string>
    <string name="setting">Setting</string>
    <string name="reg">Registration</string>
    <string name="detail">Story Details</string>
    <string name="appwidget_text">Story Banner</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="empty_text">Empty</string>
    <string name="widgetimage">WidgetImage</string>
    <string name="data_kosong">Blank Data</string>
    <string name="title_activity_maps">Maps</string>
    <string name="maps">Maps</string>
    <string name="retry">Try Again</string>
    <string name="label_name">labelMaps</string>
    <string name="imgmaps">ImgMaps</string>
    <string name="detailMaps">Detail</string>
</resources>