<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.add.AddActivity">

    <ImageView
        android:id="@+id/img_view"
        android:src="@drawable/photo_frame"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/imageview" />

    <LinearLayout
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/galeri"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/galeri"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="18sp"
            android:visibility="visible" />
        <Button
            android:id="@+id/kamera"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/kamera"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="18sp"
            android:visibility="visible" />
    </LinearLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLay_plain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp">

        <EditText
            android:id="@+id/ed_add_description"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/description_text"
            android:inputType="textMultiLine"
            android:textSize="12sp"
            android:importantForAutofill="no" />

    </com.google.android.material.textfield.TextInputLayout>
    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/button_add"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/tambah"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="18sp"
            android:visibility="visible" />
        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:visibility="gone"/>
    </LinearLayout>
</LinearLayout>