<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="#4A9586"
android:orientation="vertical"
android:scrollbarAlwaysDrawVerticalTrack="true"
tools:context=".ui.login.LoginActivity">

    <RelativeLayout
        android:alpha="0"
        android:id="@+id/relativeLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/frm_logo"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/layout_bg"
        android:orientation="vertical"
        android:padding="20dp">

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">

            <LinearLayout
                android:id="@+id/ll_login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <ImageView
                        android:id="@+id/iv_ed_email"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_alignTop="@id/inputLay_plain"
                        android:layout_alignBottom="@id/inputLay_plain"
                        android:contentDescription="@string/imageemail"
                        android:src="@drawable/user" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/inputLay_plain"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="-8dp"
                        android:layout_toEndOf="@id/iv_ed_email">

                        <EditText
                            android:id="@+id/ed_login_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginBottom="10dp"
                            android:hint="@string/email"
                            android:importantForAutofill="no"
                            android:inputType="textEmailAddress"
                            android:textSize="12sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <ImageView
                        android:id="@+id/iv_ed_password"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_below="@id/inputLay_plain"
                        android:layout_alignTop="@id/inputLay_plain_2"
                        android:layout_alignBottom="@id/inputLay_plain_2"
                        android:contentDescription="@string/imagepass"
                        android:src="@drawable/pass" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/inputLay_plain_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/inputLay_plain"
                        android:layout_marginStart="-8dp"
                        android:layout_toEndOf="@id/iv_ed_password"
                        app:passwordToggleEnabled="true">

                        <EditText
                            android:id="@+id/ed_login_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginBottom="10dp"
                            android:hint="@string/password"
                            android:importantForAutofill="no"
                            android:inputType="textPassword"
                            android:textSize="12sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/login"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/inputLay_plain_2"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="20dp"
                        android:text="@string/login"
                        android:textAllCaps="false"
                        android:textColor="#fff"
                        android:textSize="18sp"
                        android:visibility="visible" />

                    <ProgressBar
                        android:id="@+id/loading"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/login"
                        android:layout_marginVertical="20dp"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/txtBma"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/loading"
                        android:gravity="center_horizontal"
                        android:text="@string/belum_memiliki_akun"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tvDaftar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/txtBma"
                        android:gravity="center_horizontal"
                        android:text="@string/daftar_akun"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                </RelativeLayout>
            </LinearLayout>
        </ScrollView>

    </RelativeLayout>

    <FrameLayout
        android:id="@+id/frm_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:elevation="4dp">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/dicoding"
            android:contentDescription="@string/logo" />
    </FrameLayout>

</RelativeLayout>