<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4A9586"
    android:orientation="vertical"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    tools:context=".ui.registration.RegistrasiActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:alpha="0"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/layout_bg"
        android:orientation="vertical"
        android:padding="20dp">

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <EditText
                        android:id="@+id/ed_register_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginBottom="10dp"
                        android:hint="@string/nama_lengkap"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        android:textSize="12sp" />

                    <com.submission.huda.storyapps.helper.MyEditTextUsername
                        android:id="@+id/ed_register_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/ed_register_name"
                        android:layout_marginStart="10dp"
                        android:layout_marginBottom="10dp"
                        android:hint="@string/email"
                        android:importantForAutofill="no"
                        android:inputType="textEmailAddress"
                        android:textSize="12sp" />

                    <com.submission.huda.storyapps.helper.MyEditTextPassword
                        android:id="@+id/ed_register_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/ed_register_email"
                        android:layout_marginStart="10dp"
                        android:layout_marginBottom="10dp"
                        android:hint="@string/password"
                        android:importantForAutofill="no"
                        android:inputType="textPassword"
                        android:textSize="12sp" />
                    
                    <Button
                        android:id="@+id/daftar"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/ed_register_password"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="20dp"
                        android:text="@string/daftar"
                        android:textAllCaps="false"
                        android:textColor="#fff"
                        android:textSize="18sp"
                        android:visibility="visible" />

                    <ProgressBar
                        android:id="@+id/loading"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/daftar"
                        android:layout_marginVertical="20dp"
                        android:visibility="gone" />
                </RelativeLayout>
            </LinearLayout>
        </ScrollView>

    </RelativeLayout>

    <FrameLayout
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:elevation="4dp">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/dicoding"
            android:contentDescription="@string/logo" />
    </FrameLayout>

</RelativeLayout>